Added filter page (rough draft)

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -32,6 +32,15 @@ body a {
   cursor: pointer;
 }
 
+#div_lock {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgb(0, 0, 0, 0.75);
+}
+
 #menu_group {
   position: absolute;
   width: 260px;
@@ -343,6 +352,11 @@ SUB-MENU SECTION (filters and columns section in header)
   color: #999999;
   cursor: default;
 }
+.sub_button_t {
+  position: absolute;
+  top: 2px;
+  right: 8px;
+}
 .sub_button_m {
   position: absolute;
   top: 82px;
@@ -352,6 +366,24 @@ SUB-MENU SECTION (filters and columns section in header)
   position: absolute;
   top: 107px;
   right: 8px;
+}
+.sub_button_edge {
+  position: absolute;
+  background-color: #398fd1;
+  width: 8px;
+  height: 26px;
+  right: 0px;
+}
+#sub_button_edge_t {
+  top: 1px;
+  border-top-right-radius: 6px;
+}
+#sub_button_edge_m {
+  top: 82px;
+}
+#sub_button_edge_b {
+  top: 107px;
+  border-bottom-right-radius: 6px;
 }
 
 .scrollable_div {
@@ -383,28 +415,20 @@ SUB-MENU SECTION (filters and columns section in header)
   height: 130px;
   width: 196px;
 }
-#blue_box {
-  background-color: #398fd1;
-  width: 8px;
-  height: 52px;
-  border-bottom-right-radius: 6px;
-  position: absolute;
-  top: 82px;
-  right: 0px;
-}
 
 .clk_div {
   cursor: pointer;
   width: 100%;
 }
 .clk_div:hover {
-  background-color:rgb(59, 96, 138);
+  cursor: pointer;
+  background-image: linear-gradient(to right, rgb(59, 96, 138) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
   transition: all 0.05s ease-in;
 }
 .clk_div_selected {
-  cursor: pointer;
-  background-color:rgb(106, 205, 102);
+  cursor: default;
+  background-image: linear-gradient(to right, rgb(106, 205, 102) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
 }
 
@@ -468,6 +492,27 @@ SUB-MENU SECTION (filters and columns section in header)
 #border_r_c {
   width: 128px;
 }
+
+.frame {
+  position: absolute;
+  width: 90%;
+  height: 90%;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  overflow: auto;
+  box-shadow: 0 0 20px 2px #333;
+}
+.close_frame {
+  position: absolute;
+  right: 0;
+}
+#filters_frame {
+  max-width: 800px;
+  background-color: #000;
+}
+
 
 #shhh {
   position: fixed;
