--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -198,6 +198,7 @@ thead.fixed_header a:hover {
 
 
 tbody.scroll_body td, tbody.scroll_body /*tr.normal_row td */{
+  cursor: pointer;
 	padding: 4px 4px;
   font-size: 12px;
   white-space: nowrap;
@@ -511,6 +512,10 @@ SUB-MENU SECTION (filters and columns section in header)
 #filters_frame {
   max-width: 800px;
   background-color: #000;
+}
+#iframe {
+  width: 100%;
+  height: 100%;
 }
 
 
