--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -6,10 +6,12 @@
   background: rgb(0,0,5,0.3); 
 }
 ::-webkit-scrollbar-thumb {
-  background: rgb(128,200,255,0.4)
+  /*background: rgb(128,200,255,0.4);*/
+  background: rgb(58, 118, 133, 0.6);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(128,200,255,0.75); 
+  /*background: rgb(128,200,255,0.75);*/
+  background: rgb(58, 118, 133); 
 }
 ::-webkit-scrollbar-corner {
   background: rgba(0,0,5,0.3);
@@ -22,7 +24,8 @@
 body {
   overflow-x: scroll;
   overflow-y: overlay;
-  background-color: rgb(44, 44, 44);
+  /*background-color: rgb(44, 44, 44);*/
+  background-color: rgb(21, 36, 43);
   color: rgb(240, 240, 240);
   font-family: Verdana, Helvetica, sans-serif;
   font-size: 12px;
@@ -50,7 +53,8 @@ body a {
 
 .text_input {
   color: #FFF;
-  background-color:rgb(80, 80, 80);
+  /*background-color:rgb(80, 80, 80);*/
+  background-color:rgb(23, 54, 62);
   padding: 6px 10px;
   border-radius: 8px;
   border: 0px none;
@@ -67,7 +71,8 @@ body a {
 
 #note_container {
   position: fixed;
-  background-color: rgb(22, 22, 22, 0.95);
+  /*background-color: rgb(22, 22, 22, 0.95);*/
+  background-color: rgb(11, 18, 21, 0.95);
   width: auto;
   height: auto;
   text-align: center;
@@ -79,7 +84,8 @@ body a {
 
 .tab {
   position: fixed;
-  background:rgb(57, 143, 209);
+  /*background:rgb(57, 143, 209);*/
+  background:rgb(107, 223, 56);
   top: -80px;
   height: 100px;
   border: 1px solid rgb(44, 44, 44, 0.15);
@@ -90,7 +96,8 @@ body a {
 .tab_text {
   position: absolute;
   width: 100%;
-  color: #FFF;
+  /*color: #FFF;*/
+  color: rgb(11, 18, 21);
   text-align: center;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -112,7 +119,8 @@ body a {
   left: 0px;
   height: 147px;
   width: 100vw;
-  background-color: rgb(22, 22, 22, 0.95);
+  /*background-color: rgb(22, 22, 22, 0.95);*/
+  background-color: rgb(11, 18, 21, 0.95);
   display: inline-block;
   position: fixed;
 }
@@ -162,7 +170,8 @@ body a {
 .scroll_table thead th {
   position: sticky;
   top: 147px;
-  background-color: rgb(22, 22, 22, 0.95);
+  /*background-color: rgb(22, 22, 22, 0.95);*/
+  background-color: rgb(11, 18, 21, 0.95);
   background-clip: padding-box;
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
@@ -185,7 +194,8 @@ body a {
 }
 
 thead.fixed_header th:hover {
-  background-image: linear-gradient(180deg, transparent, rgb(59, 96, 138));
+  /*background-image: linear-gradient(180deg, transparent, rgb(59, 96, 138));*/
+  background-image: linear-gradient(180deg, transparent, rgb(40, 92, 105));
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
 }
 
@@ -223,7 +233,8 @@ tbody.scroll_body td a:hover {
 }
 
 tbody.scroll_body tr.alt_row td {
-	background-color:rgb(80, 80, 80);
+	/*background-color:rgb(80, 80, 80);*/
+  background-color:rgb(23, 54, 62);
 }
 
 tbody.scroll_body td:first-of-type {
@@ -237,7 +248,8 @@ tbody.scroll_body td:last-of-type {
 }
 
 tbody.scroll_body tr.row:hover td {
-  background-color:rgb(59, 96, 138);
+  /*background-color:rgb(59, 96, 138);*/
+  background-color:rgb(40, 92, 105);
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
   transition: all 0.05s ease-in;
 }
@@ -332,7 +344,8 @@ SUB-MENU SECTION (filters and columns section in header)
 */
 
 .sub_button {
-  background-image: linear-gradient(to right, rgb(57, 143, 209) 50%, rgb(57, 143, 209, .45));
+  /*background-image: linear-gradient(to right, rgb(57, 143, 209) 50%, rgb(57, 143, 209, .45));*/
+  background-image: linear-gradient(to right, rgb(23, 54, 62) 50%, rgb(23, 54, 62, 0.45));
   background-color: inherit;
   color: #FFFFFF;
   cursor: pointer;
@@ -344,7 +357,8 @@ SUB-MENU SECTION (filters and columns section in header)
   text-align: right;
 }
 .sub_button:hover:enabled {
-  background-image: linear-gradient(to right, rgb(128, 200, 255), rgb(57, 143, 209) 60%, rgb(57, 143, 209, .45));
+  /*background-image: linear-gradient(to right, rgb(128, 200, 255), rgb(57, 143, 209) 60%, rgb(57, 143, 209, .45));*/
+  background-image: linear-gradient(to right, rgb(58, 118, 133), rgb(23, 54, 62) 60%, rgb(23, 54, 62, 0.45));
 }
 .sub_button:active:enabled {
   width: 62px;
@@ -352,8 +366,11 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 .sub_button:disabled {
   background-image: none;
-  background-color:rgb(57, 143, 209, .45);
-  color: #999999;
+  /*background-color:rgb(57, 143, 209, .45);*/
+  background-color:rgb(23, 54, 62, 0.45);
+  /*color: #999999;*/
+  color: #0B1215;
+  font-weight: bold;
   cursor: default;
 }
 .sub_button_t {
@@ -373,7 +390,8 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 .sub_button_edge {
   position: absolute;
-  background-color: #398fd1;
+  /*background-color: #398fd1;*/
+  background-color: rgb(23, 54, 62);
   width: 8px;
   height: 26px;
   right: 0px;
@@ -426,13 +444,15 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 .clk_div:hover {
   cursor: pointer;
-  background-image: linear-gradient(to right, rgb(59, 96, 138) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
+  /*background-image: linear-gradient(to right, rgb(59, 96, 138) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);*/
+  background-image: linear-gradient(to right, rgb(23, 54, 62) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
   transition: all 0.05s ease-in;
 }
 .clk_div_selected {
   cursor: default;
-  background-image: linear-gradient(to right, rgb(106, 205, 102) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
+  /*background-image: linear-gradient(to right, rgb(106, 205, 102) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);*/
+  background-image: linear-gradient(to right, rgb(79, 167, 41) 10%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 20%);
   text-shadow:0px 0px 1px currentColor, 0px 0px 5px #ccc;
 }
 
@@ -520,9 +540,11 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 #filters_frame {
   max-width: 800px;
-  background-color: #000;
+  /*background-color: #000;*/
+  background-color: rgb(11, 18, 21)
 }
 #iframe {
+  display: block;
   width: 100%;
   height: 100%;
 }
