--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -17,7 +17,7 @@
   background: rgba(0,0,5,0.3);
 }
 ::placeholder {
-  color: #888;
+  color: #777;
   opacity: 1;
 }
 
@@ -86,7 +86,7 @@ body a {
   border: 1px solid #ccc;
 }
 
-.tab {
+.top_tab {
   position: fixed;
   /*background:rgb(57, 143, 209);*/
   background:rgb(107, 223, 56);
@@ -540,7 +540,21 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 .close_frame {
   position: absolute;
+  background-color:rgb(216, 33, 33);
+  color: #FFF;
+  top: 0;
   right: 0;
+  width: 24px;
+  height: 24px;
+  font-size: 16px;
+  border: 0px none;
+}
+.close_frame:hover {
+  background-color:rgb(212, 69, 69);
+}
+.close_frame span:active {
+  position: relative;
+  top: 1px;
 }
 .rank_input {
   width: 94px;
@@ -553,6 +567,58 @@ SUB-MENU SECTION (filters and columns section in header)
 }
 .add_corner {
   border-bottom-right-radius: 0;
+}
+.delete_peri {
+  position: relative;
+  top: 2px;
+  background-color:rgb(216, 33, 33);
+  font-size: 16px;
+  width: 24px;
+  height: 24px;
+  color: #FFF;
+  border: 0px none;
+  border-radius: 13px;
+}
+.delete_peri span {
+  position: relative;
+  top: -1px;
+  left: -1px;
+}
+.delete_peri span:active {
+  top: 0px;
+}
+.delete_peri:hover {
+  background-color:rgb(212, 69, 69);
+}
+.add_peri {
+  position: relative;
+  background-color:rgb(107, 223, 56);
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  color: #FFF;
+  border: 0px none;
+  border-radius: 12px;
+}
+.add_peri span {
+  position: relative;
+  top: -4px;
+  left: -1px
+}
+.add_peri:hover {
+  background-color:rgb(136, 219, 101);
+}
+.add_peri:disabled {
+  background-color:rgb(27, 56, 15);
+  color: #666;
+}
+.add_peri span:active {
+  top: -3px;
+}
+.peri_label {
+  position: relative;
+  color: rgb(250, 250, 250, 0.15);
+  font-size: 24px;
 }
 #peri_list {
   position: absolute;
@@ -575,7 +641,11 @@ SUB-MENU SECTION (filters and columns section in header)
 #peri_list::-webkit-scrollbar-thumb {
   border-radius: 0;
 }
+#peri_list > option:nth-child(odd) {
+  background-color:rgb(22, 45, 52);
+}
 #peri_list > option:checked {
+  color: #FFF;
   box-shadow: 0 0 10px 100px rgb(40, 92, 105) inset;
 }
 #filters_frame {
